--- a/app/src/main/res/layout/activity_list_exercise.xml
+++ b/app/src/main/res/layout/activity_list_exercise.xml
@@ -18,8 +18,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_ex"
-        android:layout_below="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title" />
 
 </RelativeLayout>
